# flutter_image_browser

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/my_app/: MainActivity.kt
android/app/src/main/res/xml/: file_paths.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: dialog.dart  download_dialog.dart  image_loader.dart  image_view.dart  img_list.dart  main.dart  mobile_image_view.dart  story.dart  updata_dialog.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: check_version.dart  check_version.freezed.dart  error.dart  simple.dart
lib/update/: download_dialog.dart  getdowmloadpath.dart  updateWork.dart
lib/views/: dialog.dart  image_view.dart  img_list.dart  mobile_image_view.dart
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: check_version.rs  error.rs  mod.rs  simple.rs
windows/flutter/: generated_plugins.cmake
