[package]
name = "rust_lib_my_app"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
anyhow = "1.0.96"
imagesize = "0.13"
async-walkdir = {version = "2.1.0"}
rfd= "0.15.2"
tokio ={ version = "1.43.0", features = ["full"] }
num_cpus ={ version = "*"}
tokio-stream = "0.1.17"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream"] }
serde_json = "1.0"
serde ={ version = "*", features = ["serde_derive"]}
flate2 = {version = "*",default-features = false}
zip ={ version = "2.2.3" }
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
